# sql-builder-ai-mcp

./: .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  auth_middleware.py  glama.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.well-known/mcp/: server-card.json
